// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Zorg /> Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Wmo item 1
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Mantelzorg B.V
        </p>
      </div>
    </div>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
              <time
                class="StatusDate"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                De levering van uw thuizorg is gestart
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> Matches the Full Page snapshot for item Hulp bij het huishouden (geleverd) 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Hulp bij het huishouden (geleverd)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Besluit
              </strong>
              <time
                class="StatusDate"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (geleverd) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <span
                class="altDocumentContent"
              >
                <p>
                  
            
                  <strong>
                    
              U krijgt dit besluit per post.
            
                  </strong>
                  
          
                </p>
              </span>
            </div>
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (geleverd).
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (geleverd) is beëindigd per 
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> Matches the Full Page snapshot for item Hulp bij het huishouden (gestopt) 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Hulp bij het huishouden (gestopt)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Besluit
              </strong>
              <time
                class="StatusDate"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (gestopt) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                In de brief leest u ook hoe u bezwaar kunt maken of een klacht kan
              indienen.
              
                </p>
                
            
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <span
                class="altDocumentContent"
              >
                <p>
                  
            
                  <strong>
                    
              U hebt dit besluit per post ontvangen.
            
                  </strong>
                  
          
                </p>
              </span>
            </div>
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (gestopt).
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Emile Thuiszorg heeft aan ons doorgegeven dat u geen hulp bij het huishouden (gestopt)
            meer krijgt.
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end-active ConnectLine--end"
              />
              <span
                class="Checkmark Checkmark--active"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Einde recht
              </strong>
              <time
                class="StatusDate"
              >
                22 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (gestopt) is beëindigd per 22 januari 2022
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> Matches the Full Page snapshot for item Hulp bij het huishouden (nog niet geleverd) 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Hulp bij het huishouden (nog niet geleverd)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Besluit
              </strong>
              <time
                class="StatusDate"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (nog niet geleverd) per 15 januari 2022.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <span
                class="altDocumentContent"
              >
                <p>
                  
            
                  <strong>
                    
              U krijgt dit besluit per post.
            
                  </strong>
                  
          
                </p>
              </span>
            </div>
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (nog niet geleverd).
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (nog niet geleverd) is beëindigd per 
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> Matches the Full Page snapshot for item Hulp bij het huishouden (tijdelijk gestopt) 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Hulp bij het huishouden (tijdelijk gestopt)
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Emile Thuiszorg
        </p>
      </div>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start-checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Besluit
              </strong>
              <time
                class="StatusDate"
              >
                15 januari 2022
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                
              
                <p>
                  
                U hebt recht op hulp bij het huishouden (tijdelijk gestopt) per 15 december 2021.
              
                </p>
                
              
                <p>
                  
                
                    In de brief leest u ook hoe u bezwaar kunt maken, een klacht
                    kan indienen of 
                  <u>
                    hoe u van aanbieder kunt wisselen.
                  </u>
                  
                  
              
                </p>
                
            
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            >
              <span
                class="altDocumentContent"
              >
                <p>
                  
            
                  <strong>
                    
              U krijgt dit besluit per post.
            
                  </strong>
                  
          
                </p>
              </span>
            </div>
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--checked"
              />
              <span
                class="Checkmark Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Emile Thuiszorg is gestart met het leveren van hulp bij het huishouden (tijdelijk gestopt).
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--middle-checked-next"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestopt
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Niet van toepassing.
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
        <li
          class="ListItem"
          style="display: none;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--end"
              />
              <span
                class="Checkmark"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Einde recht
              </strong>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                <p>
                  
            Uw recht op hulp bij het huishouden (tijdelijk gestopt) is beëindigd per 
          
                </p>
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
    <button
      aria-expanded="false"
      class="Button Button__plain Button__lean MoreStatus MoreStatusClosed"
    >
      <svg
        aria-hidden="true"
        class="Icon Icon__left"
        fill="#000"
        height="14px"
        width="14px"
      >
        Chevron-Left.svg
      </svg>
      Toon alles
    </button>
  </main>
</DocumentFragment>
`;

exports[`<Zorg /> Matches the Full Page snapshot for item Wmo item 1 1`] = `
<DocumentFragment>
  <main
    class="Page DetailPage StatusDetail"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Zorg en ondersteuning"
          class="ChapterIcon"
          fill="black"
        >
          zorg.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/zorg-en-ondersteuning"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Zorg en ondersteuning
        </a>
        <h2
          class="Heading Heading__large"
        >
          Wmo item 1
        </h2>
      </div>
    </header>
    <div
      class="PageContent DetailPageContent"
    >
      <div
        class="InfoDetail"
      >
        <h3
          class="Heading Heading__tiny Label"
        >
          Aanbieder
        </h3>
        <p
          class="Value"
        >
          Mantelzorg B.V
        </p>
      </div>
    </div>
    <div
      class="StatusLine"
    >
      <h4
        class="Heading Heading__tiny ListHeading"
      >
        Status
      </h4>
      <ul
        class="List"
      >
        <li
          class="ListItem ListItem--highlight"
          style="display: block;"
        >
          <div
            class="ListItemInner"
          >
            <div
              aria-label="Vinkje, processtap gereed"
              class="StatusConnection"
            >
              <span
                class="ConnectLine ConnectLine--start"
              />
              <span
                class="Checkmark Checkmark--active Checkmark--checked"
              />
            </div>
            <div
              class="Panel Panel--status"
            >
              <strong
                class="StatusTitle"
              >
                Levering gestart
              </strong>
              <time
                class="StatusDate"
              >
                24 juli 2020
              </time>
            </div>
            <div
              class="Panel Panel--description"
            >
              <div
                class="PanelContent"
              >
                De levering van uw thuizorg is gestart
              </div>
            </div>
            <div
              class="Panel Panel--documents"
            />
          </div>
        </li>
      </ul>
    </div>
  </main>
</DocumentFragment>
`;
